# compiler

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  bsconfig.json  package-lock.json  package.json
src/: Ast.res  Cli.res  Compiler.res  File.res  Infer.res  InferTest.res  Infer_test.res  Input.res  Input_test.res  Json.res  Node.res  Parser.res  Parser_test.res  Readline.res  Repl.res  Run.res  Test.res  Token.res  Tokenizer.res  Tokenizer_test.res  Type.res  TypeEnv.res  ast.rs  cli.rs  compiler.rs  index.rs  infer.rs  j.res  javascript.rs  main.rs  module.rs  module_asts.rs  module_interfaces.rs  parser.rs  pattern_matching.rs  source.rs  strings.rs  token.rs  tokenizer.rs  typ.rs  (+1 more)
src/alma/: Alma.alma  Alma.ffi.js
src/compiler/: errors.rs  mod.rs  stages.rs  state.rs  types.rs
src/snapshots/: alma__infer__tests__infer-10.snap  alma__infer__tests__infer-11.snap  alma__infer__tests__infer-12.snap  alma__infer__tests__infer-13.snap  alma__infer__tests__infer-14.snap  alma__infer__tests__infer-15.snap  alma__infer__tests__infer-16.snap  alma__infer__tests__infer-17.snap  alma__infer__tests__infer-18.snap  alma__infer__tests__infer-19.snap  alma__infer__tests__infer-2.snap  alma__infer__tests__infer-20.snap  alma__infer__tests__infer-21.snap  alma__infer__tests__infer-22.snap  alma__infer__tests__infer-23.snap  alma__infer__tests__infer-24.snap  alma__infer__tests__infer-25.snap  alma__infer__tests__infer-26.snap  alma__infer__tests__infer-27.snap  alma__infer__tests__infer-28.snap  alma__infer__tests__infer-29.snap  alma__infer__tests__infer-3.snap  (+548 more)
(+44 files in other folders)
