[package]
name = "alma"
version = "0.1.0"
authors = ["joakin <joaquin@chimeces.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pretty_assertions = "0.7.2"
im-rc = "15.0.0"
indexmap = "1.7"
clap = "2.33.3"
rustyline = "9.0.0"
shellexpand = "2.1.0"
smol_str = "0.1.18"

[dev-dependencies]
insta = "1.7"

# [profile.release]
# debug = true
